cluster/platform/homelab-docs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: homelab-docs
    app.kubernetes.io/version: 24a621c
  name: homelab-docs
spec:
  selector:
    app.kubernetes.io/name: homelab-docs
  ports:
  - name: http
    port: 8080
    targetPort: 8080
